--- a/app/views/settings/_new.html.erb
+++ b/app/views/settings/_new.html.erb
@@ -7,7 +7,7 @@
                Toggle your page layout to suit your store requirements and theme. Please select one from below options.
                </label>
                <br>
-               <div style="--top-bar-background:#00848e; --top-bar-color:#f9fafb; --top-bar-background-lighter:#1d9ba4;">
+               <!-- <div style="--top-bar-background:#00848e; --top-bar-color:#f9fafb; --top-bar-background-lighter:#1d9ba4;">
                   <div class="Polaris-Stack Polaris-Stack--spacingTight Polaris-Stack--noWrap">
                      <div class="Polaris-Stack__Item">
                         <div>
@@ -20,7 +20,7 @@
                         </div>
                      </div>
                   </div>
-               </div>
+               </div> -->
                <div class="onlyInProLayout" style="display: none;">
                   <label>
                   Enable Sticky Header(Pro layout 3)
