--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,7 +12,7 @@
   		</span>
   <% end %>
   </li>
-  <li class="bulk-upload"><a data-toggle="tab" href="#changeLogos"><span class="glyphicon glyphicon-upload"><span class="liTitle">Bulk Upload Logos</span></span></a></li>
+  <li class="bulk-upload"><a href="/bulk_uploads/new" data-remote="true" onclick="showLoader()"><span class="glyphicon glyphicon-upload"><span class="liTitle">Bulk Upload Logos</span></span></a></li>
   <li class="pro_layout"><a data-toggle="tab" href="#brandlayout"><span class="glyphicon glyphicon-upload"><span class="liTitle">Pro Layout</span></span></a></li>
   <li class="pro-widget"><a data-toggle="tab" href="#Widgets"><span class="glyphicon glyphicon-upload"><span class="liTitle">Pro Widgets</span></span></a></li>
   <li class="pricing"><a id="aprice" href="/pricing" data-remote= "true" onclick="showLoader()"><span class="glyphicon glyphicon-usd"><span class="liTitle">Pricing</span></span></a></li>
