--- a/app/views/home/_pricing.html.erb
+++ b/app/views/home/_pricing.html.erb
@@ -9,7 +9,7 @@
                         <div class="pricing-table ">
                            <div class="pricing-header">
                               <p class="pricing-title">Basic</p>
-                              <p class="pricing-rate"><sup>$</sup> 7.99 <span>/Mo.</span></p>
+                              <p class="pricing-rate" style="margin: 17px 0px 22px 0px"><sup>$</sup> 7.99 <span>/Mo.</span></p>
                               <div class="upgradetoLogoFeature" style="">
                                  <div style="--top-bar-background:#00848e; --top-bar-color:#f9fafb; --top-bar-background-lighter:#1d9ba4;"><button type="button" class="btn btn-custom Polaris-Button Polaris-Button--outline"><span class="Polaris-Button__Content"><span class="Polaris-Button__Text">Current Plan</span></span></button></div>
                               </div>
@@ -32,7 +32,7 @@
                         <div class="pricing-table ">
                            <div class="pricing-header">
                               <p class="pricing-title">Pro</p>
-                              <p class="pricing-rate"><sup>$</sup> 9.99 <span>/Mo.</span></p>
+                              <p class="pricing-rate" style="margin: 17px 0px 22px 0px"><sup>$</sup> 9.99 <span>/Mo.</span></p>
                               <div class="downgradetoLogoFeature" style="display:none;">
                                  <div style="--top-bar-background:#00848e; --top-bar-color:#f9fafb; --top-bar-background-lighter:#1d9ba4;"><button type="button" class="btn btn-custom Polaris-Button Polaris-Button--outline"><span class="Polaris-Button__Content"><span class="Polaris-Button__Text">Current Plan</span></span></button></div>
                               </div>
